--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
 
-
-:root {
+:root  {
   --primaryColor: #fff;
   --navColor1: #21292c;
   --navColor2: #aa3e39;
@@ -16,12 +16,10 @@ html {
 body {
   margin: 0;
   background: #000;
-
+  font-family: Kode Mono, sans-serif;
 }
 
 /* --- Navigation Menu ------------------------------ */
-
-
 
 /* --- Menu Bars ------------------------------------ */
 
@@ -74,7 +72,7 @@ section {
 }
 
 section#home {
-  background-image: url("https://images.unsplash.com/photo-1581453904507-626ddb717f14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80");
+  background-image: url('https://images.unsplash.com/photo-1581453904507-626ddb717f14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80');
   background-size: cover;
   background-position: center center;
 }
